gitops/websites/darkbit/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: website-deploy
  namespace: darkbit
spec:
  replicas: 1
  selector:
    matchLabels:
      app: darkbit-web
  template:
    metadata:
      labels:
        app: darkbit-web
    spec:
      securityContext:
        fsGroup: 101
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: web
          image: registry.rupan.dev/apps/darkbit@sha256:6c52241abf2223df23394470d2c8851d9add4e706856247f3304b13edc5b7bff
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
          resources:
            limits:
              cpu: 500m
              memory: 256Mi
            requests:
              cpu: 100m
              memory: 128Mi
          readinessProbe:
            httpGet:
              path: /
              port: http
            periodSeconds: 10
          volumeMounts:
            - name: nginx-cache
              mountPath: /var/cache/nginx
            - name: tmp
              mountPath: /tmp
            - name: run
              mountPath: /run
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 101
      volumes:
        - name: nginx-cache
          emptyDir: {}
        - name: tmp
          emptyDir: {}
        - name: run
          emptyDir: {}
