gitops/websites/darkbit/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: darkbit-svc
  namespace: darkbit
spec:
  selector:
    app: darkbit-web
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
  type: ClusterIP
