gitops/websites/darkbit/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: darkbit-route
  namespace: darkbit
spec:
  parentRefs:
    - name: homelab
      namespace: default
  hostnames:
    - darkbitapparel.com
    - www.darkbitapparel.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: darkbit-svc
          port: 80
